--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <div class="controlPanel">
           <div id="playing" class="button" onclick="updateSetting(this.id, !this.value)">play/pause</div>
           <div id="rewind" class="button" onclick="updateSetting(this.id, !this.value)" />reverse</div>
-          <div class="slider">
+          <div class="slider twodig">
             <label for="shapeIterations"><div>curve</div><span></span></label>
             <input type="range" id="shapeIterations" min="2" max="8" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
-          <div class="slider speedControl spinMode">
+          <div class="slider speedControl spinMode twodig">
             <label for="spinSpeed"><div>speed</div><span></span></label>
             <input type="range" id="spinSpeed" min="0" max="99" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
-          <div class="slider speedControl patternMode">
+          <div class="slider speedControl patternMode twodig">
             <label for="patternSpeed"><div>speed</div><span></span></label>
             <input type="range" id="patternSpeed" min="1" max="99" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
-          <div class="slider speedControl orbitMode">
+          <div class="slider speedControl orbitMode twodig">
             <label for="orbitSpeed"><div>speed</div><span></span></label>
             <input type="range" id="orbitSpeed" min="1" max="80" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
@@ -56,27 +56,27 @@
         </div>
         <div class="controlPanel">
           <div class="slider left spinMode patternMode">
-            <label for="tileSize"><div>tile size</div><span></span></label>
+            <label for="tileSize"><div>size</div><span></span></label>
             <input type="range" id="tileSize" min="40" max="180" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
           <div id="loopTrans" class="button patternMode" onclick="updateSetting(this.id, !this.value)">loop</div>
           <div id="shortRotations" class="button patternMode" onclick="updateSetting(this.id, !this.value)">short</div>
           <div id="rotX" class="button patternMode" onclick="updateSetting(this.id, !this.value)">flip x</div>
           <div id="rotY" class="button patternMode" onclick="updateSetting(this.id, !this.value)">flip y</div>
-          <div class="slider right spinMode">
+          <div class="slider right spinMode twodig">
             <label for="spinXSpeed"><div>flip x</div><span></span></label>
             <input type="range" id="spinXSpeed" min="0" max="99" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
           <div class="button spinMode" onclick="clearSpinX()">clear</div>
           <div class="slider left spinMode patternMode">
-            <label for="tileScale"><div>tile scale</div><span></span></label>
+            <label for="tileScale"><div>scale</div><span></span></label>
             <input type="range" id="tileScale" min=".7" max="2.8" step=".02" oninput="updateSetting(this.id, this.value)" />
           </div>
           <div class="button patternMode trans" onclick="addTransition('rtl')">&lt;</div>
           <div class="button patternMode trans" onclick="addTransition('ltr')">&gt;</div>
           <div class="button patternMode trans" onclick="addTransition('cascade up')">^</div>
           <div class="button patternMode trans" onclick="addTransition('cascade down')">v</div>
-          <div class="slider right spinMode">
+          <div class="slider right spinMode twodig">
             <label for="spinYSpeed"><div>flip y</div><span></span></label>
             <input type="range" id="spinYSpeed" min="0" max="99" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
@@ -128,15 +128,20 @@
             <input type="color" id="color2b" onchange="updateSetting(this.id, this.value)" />
           </div>
           <div id="c2mode" class="button" onclick="updateSetting(this.id, (this.value + 1) % 5)">mode</div>
-          <div class="slider left">
+          <div class="slider left twodig">
             <label for="c1alpha"><div>α</div><span></span></label>
-            <input type="range" id="c1alpha" min="0" max="255" step="1" oninput="updateSetting(this.id, this.value)" />
+            <input type="range" id="c1alpha" min="0" max="1" step=".01" oninput="updateSetting(this.id, this.value)" />
           </div>
-          <div class="slider right">
+          <div class="slider right twodig">
             <label for="c2alpha"><div>α</div><span></span></label>
-            <input type="range" id="c2alpha" min="0" max="255" step="1" oninput="updateSetting(this.id, this.value)" />
+            <input type="range" id="c2alpha" min="0" max="1" step=".01" oninput="updateSetting(this.id, this.value)" />
           </div>
           <input type="color" id="bgColor" onchange="updateSetting(this.id, this.value)" />
+        </div>
+      </div>
+      <div id="presets">
+        <div class="controlHeader">presets</div>
+        <div class="controlPanel">
         </div>
       </div>
       <div id="msg">
