adding some presets

--- a/index.html
+++ b/index.html
@@ -150,10 +150,11 @@
           </div>
           <input type="color" id="bgColor" onchange="updateSetting(this.id, this.value)" />
           <div id="colorPresets">
-          <!-- <div class="button" onclick="exportPreset('color')">export</div> -->
-            <div class="button" onclick="loadPreset(4)">1</div>
-            <div class="button" onclick="loadPreset(5)">2</div>
-            <div class="button" onclick="loadPreset(6)">3</div>
+            <!-- <div class="button" onclick="exportPreset('color')">export</div> -->
+            <div class="button" onclick="loadPreset(10)">1</div>
+            <div class="button" onclick="loadPreset(4)">2</div>
+            <div class="button" onclick="loadPreset(5)">3</div>
+            <div class="button" onclick="loadPreset(6)">4</div>
           </div>
         </div>
       </div>
@@ -169,6 +170,7 @@
           <div class="button orbitMode" onclick="loadPreset(2)">1</div>
           <div class="button orbitMode" onclick="loadPreset(3)">2</div>
           <div class="button orbitMode" onclick="loadPreset(9)">3</div>
+          <div class="button orbitMode" onclick="loadPreset(11)">4</div>
         </div>
       </div>
       <div id="msg">
