switch presets to named objects instead of a list

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
           <input type="color" id="bgColor" onchange="updateSetting(this.id, this.value)" />
           <div id="colorPresets">
             <!-- <div class="button" onclick="exportPreset('color')">export</div> -->
-            <div class="button" onclick="loadPreset(10)">1</div>
-            <div class="button" onclick="loadPreset(4)">2</div>
-            <div class="button" onclick="loadPreset(5)">3</div>
-            <div class="button" onclick="loadPreset(6)">4</div>
+            <div class="button" onclick="loadPreset('c1')">1</div>
+            <div class="button" onclick="loadPreset('c2')">2</div>
+            <div class="button" onclick="loadPreset('c3')">3</div>
+            <div class="button" onclick="loadPreset('c4')">4</div>
           </div>
         </div>
       </div>
@@ -163,14 +163,14 @@
         <div class="controlHeader">presets</div>
         <div class="controlPanel">
           <!-- <div class="button" onclick="exportPreset(mode)">export</div> -->
-          <div class="button spinMode" onclick="loadPreset(0)">1</div>
-          <div class="button patternMode" onclick="loadPreset(1)">1</div>
-          <div class="button patternMode" onclick="loadPreset(7)">2</div>
-          <div class="button patternMode" onclick="loadPreset(8)">3</div>
-          <div class="button orbitMode" onclick="loadPreset(2)">1</div>
-          <div class="button orbitMode" onclick="loadPreset(3)">2</div>
-          <div class="button orbitMode" onclick="loadPreset(9)">3</div>
-          <div class="button orbitMode" onclick="loadPreset(11)">4</div>
+          <div class="button spinMode" onclick="loadPreset('s1')">s1</div>
+          <div class="button patternMode" onclick="loadPreset('p1')">p1</div>
+          <div class="button patternMode" onclick="loadPreset('p2')">p2</div>
+          <div class="button patternMode" onclick="loadPreset('p3')">p3</div>
+          <div class="button orbitMode" onclick="loadPreset('o1')">o1</div>
+          <div class="button orbitMode" onclick="loadPreset('o2')">o2</div>
+          <div class="button orbitMode" onclick="loadPreset('o3')">o3</div>
+          <div class="button orbitMode" onclick="loadPreset('o4')">o4</div>
         </div>
       </div>
       <div id="msg">
