- beginning help text - adding and tweaking presets

--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
             <div class="button" onclick="loadPreset('c2')">2</div>
             <div class="button" onclick="loadPreset('c3')">3</div>
             <div class="button" onclick="loadPreset('c4')">4</div>
+            <div class="button" onclick="loadPreset('c5')">5</div>
+            <div class="button" onclick="loadPreset('c6')">6</div>
           </div>
         </div>
       </div>
@@ -169,6 +171,7 @@
           <div class="button patternMode" onclick="loadPreset('p2')">p2</div>
           <div class="button patternMode" onclick="loadPreset('p3')">p3</div>
           <div class="button patternMode" onclick="loadPreset('p4')">p4</div>
+          <div class="button patternMode" onclick="loadPreset('p5')">p5</div>
           <div class="button orbitMode" onclick="loadPreset('o1')">o1</div>
           <div class="button orbitMode" onclick="loadPreset('o2')">o2</div>
           <div class="button orbitMode" onclick="loadPreset('o3')">o3</div>
@@ -178,8 +181,9 @@
         </div>
       </div>
       <div id="msg">
-        <div id="msgHeader" class="controlHeader">tiles</div>
-        <div id="message" class="controlPanel">
+        <div id="msgHeader" class="controlHeader">welcome</div>
+        <div class="controlPanel">
+          <div id="message">Try the different modes, and click the presets!</div>
           <!-- <div class="button" onclick="exportPreset(mode)">export</div>
           <div class="button" onclick="exportPreset('color')">export color</div> -->
         </div>
