--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="playback">
         <div class="controlHeader">playback</div>
         <div class="controlPanel">
-          <div id="playing" class="button" onclick="updateSetting(this.id, !this.value)">play/pause</div>
+          <div id="playing" class="button" onclick="updateSetting(this.id, !this.value)">play</div>
           <div id="rewind" class="button" onclick="updateSetting(this.id, !this.value)" />reverse</div>
           <div class="slider speedControl spinMode twodig">
             <label for="spinSpeed"><div>speed</div><span></span></label>
@@ -127,6 +127,27 @@
         </div>
       </div>
 
+      <div id="presets">
+        <div class="controlHeader">presets</div>
+        <div class="controlPanel">
+          <div class="button spinMode" onclick="loadPreset('s1')">s1</div>
+          <div class="button spinMode" onclick="loadPreset('s2')">s2</div>
+          <div class="button spinMode" onclick="loadPreset('s3')">s3</div>
+          <div class="button spinMode" onclick="loadPreset('s4')">s4</div>
+          <div class="button patternMode" onclick="loadPreset('p1')">p1</div>
+          <div class="button patternMode" onclick="loadPreset('p2')">p2</div>
+          <div class="button patternMode" onclick="loadPreset('p3')">p3</div>
+          <div class="button patternMode" onclick="loadPreset('p4')">p4</div>
+          <div class="button patternMode" onclick="loadPreset('p5')">p5</div>
+          <div class="button orbitMode" onclick="loadPreset('o1')">o1</div>
+          <div class="button orbitMode" onclick="loadPreset('o2')">o2</div>
+          <div class="button orbitMode" onclick="loadPreset('o3')">o3</div>
+          <div class="button orbitMode" onclick="loadPreset('o4')">o4</div>
+          <div class="button orbitMode" onclick="loadPreset('o5')">o5</div>
+          <div class="button orbitMode" onclick="loadPreset('o6')">o6</div>
+        </div>
+      </div>
+
       <div id="color">
         <div class="controlHeader">color</div>
         <div class="controlPanel">
@@ -159,36 +180,9 @@
           </div>
         </div>
       </div>
-
-      <div id="presets">
-        <div class="controlHeader">presets</div>
-        <div class="controlPanel">
-          <div class="button spinMode" onclick="loadPreset('s1')">s1</div>
-          <div class="button spinMode" onclick="loadPreset('s2')">s2</div>
-          <div class="button spinMode" onclick="loadPreset('s3')">s3</div>
-          <div class="button spinMode" onclick="loadPreset('s4')">s4</div>
-          <div class="button patternMode" onclick="loadPreset('p1')">p1</div>
-          <div class="button patternMode" onclick="loadPreset('p2')">p2</div>
-          <div class="button patternMode" onclick="loadPreset('p3')">p3</div>
-          <div class="button patternMode" onclick="loadPreset('p4')">p4</div>
-          <div class="button patternMode" onclick="loadPreset('p5')">p5</div>
-          <div class="button orbitMode" onclick="loadPreset('o1')">o1</div>
-          <div class="button orbitMode" onclick="loadPreset('o2')">o2</div>
-          <div class="button orbitMode" onclick="loadPreset('o3')">o3</div>
-          <div class="button orbitMode" onclick="loadPreset('o4')">o4</div>
-          <div class="button orbitMode" onclick="loadPreset('o5')">o5</div>
-          <div class="button orbitMode" onclick="loadPreset('o6')">o6</div>
-        </div>
-      </div>
-      <div id="msg">
-        <div id="msgHeader" class="controlHeader">welcome</div>
-        <div class="controlPanel">
-          <div id="message">Try the different modes, and click the presets!</div>
-          <!-- <div class="button" onclick="exportPreset(mode)">export</div>
-          <div class="button" onclick="exportPreset('color')">export color</div> -->
-        </div>
-      </div>
     </div>
+    <!-- <div class="button" onclick="exportPreset(mode)">export</div>
+    <div class="button" onclick="exportPreset('color')">export color</div> -->
 
     <script src="lib/p5.min.js" type="text/javascript"></script>
     <script src="settings.js" type="text/javascript"></script>
