--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <input type="text" id="pattern" onchange="updateSetting(this.id, this.value)" />
           </div>
           <div class="input positionControl orbitMode">
-            <label for="orbit">orbit</label>
+            <label for="orbit">position</label>
             <input type="text" id="orbit" onchange="updateSetting(this.id, this.value)" />
           </div>
           <div id="resetPos" class="button" onclick="resetPos()">reset</div>
@@ -52,7 +52,7 @@
         <div id="modeTabs">
           <div class="controlHeader" onclick="setMode('spin')">spin</div><!--
        --><div class="controlHeader pulse" onclick="setMode('pattern')">pattern</div><!--
-       --><div class="controlHeader pulse" onclick="setMode('orbit')">orbit</div>
+       --><div class="controlHeader pulse" onclick="setMode('orbit')">spiral</div>
         </div>
         <div class="controlPanel">
           <div class="slider left spinMode">
@@ -112,11 +112,11 @@
             <input type="range" id="zoom" min="4" max="120" step="1" oninput="updateZoom(this.value)" />
           </div>
           <div class="slider right orbitMode fourdig">
-            <label for="bodies"><div>tiles</div><span></span></label>
-            <input type="range" id="bodies" min="100" max="1990" step="10" oninput="updateSetting(this.id, this.value)" />
+            <label for="numTiles"><div>tiles</div><span></span></label>
+            <input type="range" id="numTiles" min="100" max="1990" step="10" oninput="updateSetting(this.id, this.value)" />
           </div>
           <div class="slider left orbitMode">
-            <label for="curl"><div>cols</div><span></span></label>
+            <label for="curl"><div>curl</div><span></span></label>
             <input type="range" id="curl" min="1" max="60" step="1" oninput="updateSetting(this.id, this.value)" />
           </div>
           <div class="slider right orbitMode">
